Generate Pelican site

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -42,8 +42,9 @@ mengatakan <em>&ldquo;We will not hide problems&rdquo;</em> yang justru membuat 
 <p>Komunitas Free &amp; Open Source Software telah dan akan selalu memberikan sesuatu 
 yang bernilai buat Saya, salah satu yang paling besar adalah pengetahuan, dan 
 itu semua saya dapat dengan bebas dan tidak mahal.</p>
-<p>Saya seorang yang <em>&ldquo;Computer Geek&rdquo;</em>, saat ini bekerja sebagai Linux System Administrator 
-di <a href="http://www.transkon.net.id">Transkon-Net</a>, sebuah ISP di kota Balikpapan.</p>
+<p>Saya seorang yang <em>&ldquo;Computer Geek&rdquo;</em>, saat ini bekerja sebagai Site Reliability Engineer 
+di <a href="https://birdsend.co">BirdSend</a>, an email marketing tool specifically designed 
+for content creators.</p>
 <p>Seperti para geek pada umumnya, juga menyukai dunia Teknologi dan
 Informasi, pengguna Debian GNU/Linux, dan penggemar film Star Wars. Selain itu,
 juga suka science, kopi, dan keheningan alam bebas. Oleh karena itu,
@@ -95,7 +96,7 @@ pastikan atribusi source-nya tidak hilang.</p>
               <li><a href="https://plus.google.com/+DhaniSetiawanYoda" target="_blank">Google+</a></li>
               <li><a href="http://www.transkon.net.id" target="_blank">Transkon-Net</a></li>
               <li><a href="https://www.debian.org/" target="_blank">Debian</a></li>
-              <li><a href="https://www.openstack.org" target="_blank">OpenStack</a></li>
+              <li><a href="https://birdsend.co" target="_blank">BirdSend</a></li>
             </ul>
           </nav>
           <!-- end includes/sidebar.html --></aside> <!-- /#page-side -->
