--- a/how-to/reset-mikrobits-tanpa-console.html
+++ b/how-to/reset-mikrobits-tanpa-console.html
@@ -302,7 +302,7 @@ Cabut kabel sata dari Mikrobits, dan coba hidupkan kembali Mikrobits tanpa drive
               <li><a href="https://plus.google.com/+DhaniSetiawanYoda" target="_blank">Google+</a></li>
               <li><a href="http://www.transkon.net.id" target="_blank">Transkon-Net</a></li>
               <li><a href="https://www.debian.org/" target="_blank">Debian</a></li>
-              <li><a href="https://www.openstack.org" target="_blank">OpenStack</a></li>
+              <li><a href="https://birdsend.co" target="_blank">BirdSend</a></li>
             </ul>
           </nav>
           <!-- end includes/sidebar.html --></aside> <!-- /#page-side -->
