--- a/linux-padawan/linux-dasar-1.html
+++ b/linux-padawan/linux-dasar-1.html
@@ -355,7 +355,7 @@ Artikel selanjutnya: <a href="//devnull.web.id/linux-padawan/linux-dasar-2.html"
               <li><a href="https://plus.google.com/+DhaniSetiawanYoda" target="_blank">Google+</a></li>
               <li><a href="http://www.transkon.net.id" target="_blank">Transkon-Net</a></li>
               <li><a href="https://www.debian.org/" target="_blank">Debian</a></li>
-              <li><a href="https://www.openstack.org" target="_blank">OpenStack</a></li>
+              <li><a href="https://birdsend.co" target="_blank">BirdSend</a></li>
             </ul>
           </nav>
           <!-- end includes/sidebar.html --></aside> <!-- /#page-side -->
