--- a/misc/ssl-tls-letsencrypt.html
+++ b/misc/ssl-tls-letsencrypt.html
@@ -614,7 +614,7 @@ Baik, sampai sini semoga tulisan ini bisa dipahami. Silahkan di-share, dikomenta
               <li><a href="https://plus.google.com/+DhaniSetiawanYoda" target="_blank">Google+</a></li>
               <li><a href="http://www.transkon.net.id" target="_blank">Transkon-Net</a></li>
               <li><a href="https://www.debian.org/" target="_blank">Debian</a></li>
-              <li><a href="https://www.openstack.org" target="_blank">OpenStack</a></li>
+              <li><a href="https://birdsend.co" target="_blank">BirdSend</a></li>
             </ul>
           </nav>
           <!-- end includes/sidebar.html --></aside> <!-- /#page-side -->
