--- a/networking/bbm-mitm.html
+++ b/networking/bbm-mitm.html
@@ -283,7 +283,7 @@ Saran saya sebelum vulnerability ini hilang, sebaiknya tidak kirim informasi sen
               <li><a href="https://plus.google.com/+DhaniSetiawanYoda" target="_blank">Google+</a></li>
               <li><a href="http://www.transkon.net.id" target="_blank">Transkon-Net</a></li>
               <li><a href="https://www.debian.org/" target="_blank">Debian</a></li>
-              <li><a href="https://www.openstack.org" target="_blank">OpenStack</a></li>
+              <li><a href="https://birdsend.co" target="_blank">BirdSend</a></li>
             </ul>
           </nav>
           <!-- end includes/sidebar.html --></aside> <!-- /#page-side -->
