Generate Pelican site

--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -43,7 +43,7 @@ mengatakan <em>&ldquo;We will not hide problems&rdquo;</em> yang justru membuat 
 yang bernilai buat Saya, salah satu yang paling besar adalah pengetahuan, dan 
 itu semua saya dapat dengan bebas dan tidak mahal.</p>
 <p>Saya seorang yang <em>&ldquo;Computer Geek&rdquo;</em>, saat ini bekerja sebagai Site Reliability Engineer 
-di <a href="https://birdsend.co">BirdSend</a>, an email marketing tool specifically designed 
+di <a href="https://birdsend.co">BirdSend</a>, email marketing tool specifically designed 
 for content creators.</p>
 <p>Seperti para geek pada umumnya, juga menyukai dunia Teknologi dan
 Informasi, pengguna Debian GNU/Linux, dan penggemar film Star Wars. Selain itu,
